[gd_scene load_steps=8 format=2]

[ext_resource path="res://WorldMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://King.tscn" type="PackedScene" id=4]
[ext_resource path="res://Shop.tscn" type="PackedScene" id=5]
[ext_resource path="res://Gui.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "intro"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 0.535887 ),
"update": 0,
"values": [ Vector2( 0, -78 ), Vector2( 0, 110 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="WorldMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -655373, 0, 131073, -655372, -1610612736, 131072, -655371, -1610612736, 131072, -655370, -1610612736, 131074, -655369, -1610612736, 131074, -655368, -1610612736, 131074, -655367, -1610612736, 131074, -655366, -1610612736, 131074, -655365, -1610612736, 131074, -655364, -1610612736, 131074, -655363, -1610612736, 131074, -655362, -1610612736, 131074, -655361, -1610612736, 131074, -720896, -1610612736, 131074, -720895, -1610612736, 131074, -720894, -1610612736, 131074, -720893, -1610612736, 131074, -720892, -1610612736, 131074, -720891, -1610612736, 131074, -720890, -1610612736, 131074, -720889, -1610612736, 131074, -720888, -1610612736, 131074, -720887, -1610612736, 131074, -720886, -1610612736, 131072, -720885, -1610612736, 131072, -720884, -1610612736, 131073, -589837, 0, 131072, -589836, 0, 4, -589835, 1610612736, 3, -589834, 536870912, 0, -589833, 536870912, 0, -589832, -536870912, 0, -589831, -536870912, 0, -589830, -536870912, 0, -589829, -536870912, 0, -589828, -536870912, 65537, -589827, 536870912, 65536, -589826, 1073741824, 3, -589825, 536870912, 4, -655360, 536870912, 4, -655359, 536870912, 3, -655358, 536870912, 65536, -655357, -2147483648, 65537, -655356, -536870912, 0, -655355, -536870912, 0, -655354, -536870912, 0, -655353, -536870912, 0, -655352, 536870912, 0, -655351, 536870912, 0, -655350, 0, 3, -655349, 1610612736, 4, -655348, 1610612736, 131072, -524301, 0, 131072, -524300, 0, 4, -524299, 1610612736, 3, -524298, 536870912, 0, -524297, 536870912, 0, -524296, -2147483648, 0, -524295, 0, 1, -524294, -2147483648, 0, -524293, -2147483648, 0, -524292, -536870912, 65537, -524291, -536870912, 65536, -524290, 1073741824, 3, -524289, -536870912, 4, -589824, -536870912, 4, -589823, 536870912, 3, -589822, -536870912, 65536, -589821, -2147483648, 65537, -589820, -2147483648, 0, -589819, -2147483648, 0, -589818, -2147483648, 0, -589817, -2147483648, 0, -589816, 536870912, 0, -589815, 536870912, 0, -589814, 0, 3, -589813, 1610612736, 4, -589812, 1610612736, 131072, -458765, 0, 131072, -458764, 0, 4, -458763, 1610612736, 3, -458762, 536870912, 0, -458761, 536870912, 0, -458760, 0, 0, -458759, 1610612736, 0, -458758, 1610612736, 0, -458757, 1610612736, 0, -458756, -536870912, 65537, -458755, 1610612736, 65536, -458754, 0, 3, -458753, 1610612736, 4, -524288, 1610612736, 4, -524287, 1610612736, 3, -524286, 1610612736, 65536, -524285, -2147483648, 65537, -524284, 1610612736, 0, -524283, 0, 1, -524282, 1610612736, 0, -524281, 0, 0, -524280, 536870912, 0, -524279, 536870912, 0, -524278, 0, 3, -524277, 1610612736, 4, -524276, 1610612736, 131072, -393229, 0, 131072, -393228, 0, 4, -393227, 1610612736, 3, -393226, 536870912, 0, -393225, 536870912, 0, -393224, 0, 0, -393223, 1610612736, 0, -393222, 0, 2, -393221, 1610612736, 0, -393220, -536870912, 65537, -393219, 1610612736, 65536, -393218, 0, 3, -393217, 1610612736, 4, -458752, 1610612736, 4, -458751, 1610612736, 3, -458750, 1610612736, 65536, -458749, -2147483648, 65537, -458748, 1610612736, 0, -458747, 1610612736, 0, -458746, 1610612736, 0, -458745, 0, 0, -458744, 536870912, 0, -458743, 536870912, 0, -458742, 0, 3, -458741, 1610612736, 4, -458740, 1610612736, 131072, -327693, 0, 131072, -327692, 0, 4, -327691, 1610612736, 3, -327690, 536870912, 0, -327689, 536870912, 0, -327688, 0, 0, -327687, 0, 1, -327686, 1610612736, 0, -327685, 1610612736, 0, -327684, 536870912, 65538, -327683, 536870912, 65537, -327682, 0, 65539, -327681, 536870912, 65540, -393216, 536870912, 65540, -393215, 536870912, 65539, -393214, 536870912, 65537, -393213, -2147483648, 65538, -393212, 1610612736, 0, -393211, 1610612736, 0, -393210, 1610612736, 0, -393209, 0, 0, -393208, 536870912, 0, -393207, 536870912, 0, -393206, 0, 3, -393205, 1610612736, 4, -393204, 1610612736, 131072, -262157, 0, 131072, -262156, 0, 4, -262155, 1610612736, 3, -262154, 536870912, 0, -262153, 536870912, 0, -262152, 0, 0, -262151, 1610612736, 0, -262150, 1610612736, 0, -262149, 1610612736, 0, -262148, 1610612736, 0, -262147, 1610612736, 0, -262146, 0, 3, -262145, 1610612736, 4, -327680, 1610612736, 4, -327679, 1610612736, 3, -327678, 1610612736, 0, -327677, 0, 1, -327676, 1610612736, 0, -327675, 1610612736, 0, -327674, 1610612736, 0, -327673, 0, 0, -327672, 536870912, 0, -327671, 536870912, 0, -327670, 0, 3, -327669, 1610612736, 4, -327668, 1610612736, 131072, -196621, 0, 131072, -196620, 0, 4, -196619, 1610612736, 3, -196618, 536870912, 0, -196617, 536870912, 0, -196616, 0, 0, -196615, 1610612736, 0, -196614, 1610612736, 0, -196613, 1610612736, 0, -196612, 1610612736, 0, -196611, 1610612736, 0, -196610, 0, 3, -196609, 1610612736, 4, -262144, 1610612736, 4, -262143, 1610612736, 3, -262142, 1610612736, 0, -262141, 1610612736, 0, -262140, 1610612736, 0, -262139, 1610612736, 0, -262138, 1610612736, 0, -262137, 0, 0, -262136, 536870912, 0, -262135, 536870912, 0, -262134, 0, 3, -262133, 1610612736, 4, -262132, 1610612736, 131072, -131085, 0, 131072, -131084, 0, 4, -131083, 1610612736, 3, -131082, 536870912, 0, -131081, 536870912, 0, -131080, 0, 0, -131079, 0, 1, -131078, 0, 2, -131077, 1610612736, 0, -131076, 1610612736, 0, -131075, 1610612736, 0, -131074, 0, 3, -131073, 0, 4, -196608, 0, 4, -196607, 1610612736, 3, -196606, 0, 1, -196605, 1610612736, 0, -196604, 1610612736, 0, -196603, 1610612736, 0, -196602, 0, 2, -196601, 0, 0, -196600, 536870912, 0, -196599, 536870912, 0, -196598, 0, 3, -196597, 1610612736, 4, -196596, 1610612736, 131072, -65549, 0, 131072, -65548, 0, 4, -65547, 1610612736, 3, -65546, 536870912, 0, -65545, 536870912, 0, -65544, 0, 0, -65543, 1610612736, 0, -65542, 1610612736, 0, -65541, 1610612736, 0, -65540, 1610612736, 0, -65539, 0, 0, -65538, 0, 3, -65537, 0, 4, -131072, 0, 4, -131071, 1610612736, 3, -131070, 0, 1, -131069, 1610612736, 0, -131068, 1610612736, 0, -131067, 1610612736, 0, -131066, 0, 2, -131065, 0, 0, -131064, 536870912, 0, -131063, 536870912, 0, -131062, 0, 3, -131061, 1610612736, 4, -131060, 1610612736, 131072, -13, 0, 131072, -12, 0, 4, -11, 1610612736, 3, -10, 536870912, 0, -9, 536870912, 0, -8, 0, 0, -7, 1610612736, 0, -6, 1610612736, 0, -5, 1610612736, 0, -4, 1610612736, 0, -3, 0, 1, -2, 0, 3, -1, 0, 4, -65536, 0, 4, -65535, 1610612736, 3, -65534, 0, 0, -65533, 1610612736, 0, -65532, 1610612736, 0, -65531, 1610612736, 0, -65530, 1610612736, 0, -65529, 0, 0, -65528, 536870912, 0, -65527, 536870912, 0, -65526, 0, 3, -65525, 1610612736, 4, -65524, 1610612736, 131072, 65523, 0, 131072, 65524, 0, 4, 65525, 1610612736, 3, 65526, 536870912, 0, 65527, 536870912, 0, 65528, 0, 0, 65529, 0, 1, 65530, 0, 1, 65531, 1610612736, 0, 65532, 1610612736, 0, 65533, 0, 0, 65534, 0, 3, 65535, 0, 4, 0, 0, 4, 1, 1610612736, 3, 2, 0, 0, 3, 1610612736, 0, 4, 1610612736, 0, 5, 1610612736, 0, 6, 0, 0, 7, 0, 0, 8, 536870912, 0, 9, 536870912, 0, 10, 0, 3, 11, 1610612736, 4, 12, 1610612736, 131072, 131059, 0, 131072, 131060, 0, 4, 131061, 1610612736, 3, 131062, 536870912, 0, 131063, 536870912, 0, 131064, 0, 0, 131065, 0, 0, 131066, 1610612736, 0, 131067, 1610612736, 0, 131068, 1610612736, 0, 131069, 0, 0, 131070, 0, 3, 131071, 0, 4, 65536, 1610612736, 4, 65537, 1610612736, 3, 65538, 0, 0, 65539, 1610612736, 0, 65540, 1610612736, 0, 65541, 1610612736, 0, 65542, 0, 0, 65543, 0, 0, 65544, 536870912, 0, 65545, 536870912, 0, 65546, 0, 3, 65547, 1610612736, 4, 65548, 1610612736, 131072, 196595, 0, 131072, 196596, 0, 4, 196597, 1610612736, 3, 196598, 536870912, 0, 196599, 536870912, 0, 196600, 0, 0, 196601, 1610612736, 0, 196602, 1610612736, 0, 196603, 1610612736, 0, 196604, 1610612736, 0, 196605, 0, 1, 196606, 0, 3, 196607, 1610612736, 4, 131072, 1610612736, 4, 131073, 1610612736, 3, 131074, 1610612736, 0, 131075, 1610612736, 0, 131076, 0, 2, 131077, 1610612736, 0, 131078, 0, 0, 131079, 0, 0, 131080, 536870912, 0, 131081, 536870912, 0, 131082, 0, 3, 131083, 0, 4, 131084, 1610612736, 131072, 262131, 0, 131072, 262132, 0, 4, 262133, 1610612736, 3, 262134, 536870912, 0, 262135, 536870912, 0, 262136, 0, 0, 262137, 0, 1, 262138, 1610612736, 0, 262139, 1610612736, 0, 262140, 1610612736, 0, 262141, 1610612736, 0, 262142, 0, 3, 262143, 1610612736, 4, 196608, 1610612736, 4, 196609, 1610612736, 3, 196610, 1610612736, 0, 196611, 1610612736, 0, 196612, 1610612736, 0, 196613, 1610612736, 0, 196614, 1610612736, 0, 196615, 0, 0, 196616, 536870912, 0, 196617, 536870912, 0, 196618, 0, 3, 196619, 0, 4, 196620, 1610612736, 131072, 327667, 0, 131072, 327668, 0, 4, 327669, 1610612736, 3, 327670, 536870912, 0, 327671, 536870912, 0, 327672, 0, 0, 327673, 1610612736, 0, 327674, 1610612736, 0, 327675, 1610612736, 0, 327676, 1610612736, 0, 327677, 1610612736, 0, 327678, 0, 3, 327679, 1610612736, 4, 262144, 1610612736, 4, 262145, 1610612736, 3, 262146, 1610612736, 0, 262147, 1610612736, 0, 262148, 1610612736, 0, 262149, 1610612736, 0, 262150, 0, 1, 262151, 0, 0, 262152, 536870912, 0, 262153, 536870912, 0, 262154, 0, 3, 262155, 0, 4, 262156, 1610612736, 131072, 393203, 0, 131072, 393204, 0, 4, 393205, 1610612736, 3, 393206, 536870912, 0, 393207, 536870912, 0, 393208, 0, 2, 393209, 1610612736, 0, 393210, 0, 2, 393211, 1610612736, 0, 393212, 1610612736, 0, 393213, 1610612736, 0, 393214, 0, 3, 393215, 1610612736, 4, 327680, 1610612736, 4, 327681, 1610612736, 3, 327682, 0, 1, 327683, 1610612736, 0, 327684, 1610612736, 0, 327685, 1610612736, 0, 327686, 1610612736, 0, 327687, 0, 0, 327688, 536870912, 0, 327689, 536870912, 0, 327690, 0, 3, 327691, 0, 4, 327692, 1610612736, 131072, 458739, 0, 131072, 458740, 0, 4, 458741, 1610612736, 3, 458742, 1610612736, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 3, 458751, 1610612736, 4, 393216, 1610612736, 4, 393217, 1610612736, 3, 393218, 536870912, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 3, 393227, 0, 4, 393228, 1610612736, 131072, 524275, 0, 131072, 524276, 0, 4, 524277, 1610612736, 3, 524278, 1610612736, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 3, 524287, 1610612736, 4, 458752, 1610612736, 4, 458753, 1610612736, 3, 458754, 536870912, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 3, 458763, 0, 4, 458764, 1610612736, 131072, 589811, 0, 131072, 589812, 0, 4, 589813, 1610612736, 3, 589814, 1610612736, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 3, 589823, 1610612736, 4, 524288, 1610612736, 4, 524289, 1610612736, 3, 524290, 536870912, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 3, 524299, 0, 4, 524300, 1610612736, 131072, 655347, 0, 131072, 655348, 0, 4, 655349, 1610612736, 3, 655350, 1610612736, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 3, 655359, 1610612736, 4, 589824, 1610612736, 4, 589825, 1610612736, 3, 589826, 536870912, 0, 589827, 536870912, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 3, 589835, 0, 4, 589836, 1610612736, 131072, 720883, 0, 131072, 720884, 0, 4, 720885, 1610612736, 3, 720886, 0, 0, 720887, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 3, 720895, 1610612736, 4, 655360, 1610612736, 4, 655361, 1610612736, 3, 655362, 536870912, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, -1073741824, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 3, 655371, 0, 4, 655372, 1610612736, 131072, 786419, -1073741824, 131073, 786420, -1073741824, 131072, 786421, -1073741824, 131072, 786422, -1073741824, 131074, 786423, -1073741824, 131074, 786424, -1073741824, 131074, 786425, -1073741824, 131074, 786426, -1073741824, 131074, 786427, -1073741824, 131074, 786428, -1073741824, 131074, 786429, -1610612736, 131073, 786430, 0, 3, 786431, -1610612736, 4, 720896, -1610612736, 4, 720897, 1610612736, 3, 720898, 0, 131073, 720899, -1073741824, 131074, 720900, -1073741824, 131074, 720901, -1073741824, 131074, 720902, -1073741824, 131074, 720903, -1073741824, 131074, 720904, -1073741824, 131074, 720905, -1073741824, 131074, 720906, -1073741824, 131072, 720907, -1073741824, 131072, 720908, 1610612736, 131073, 851965, 1073741824, 131072, 851966, 1073741824, 65539, 851967, 1610612736, 65540, 786432, 1610612736, 65540, 786433, 1610612736, 65539, 786434, 536870912, 131072, 917501, 0, 131072, 917502, 0, 3, 917503, 0, 4, 851968, 0, 4, 851969, 1610612736, 3, 851970, 1610612736, 131072, 983037, 0, 131072, 983038, 0, 3, 983039, 0, 4, 917504, 0, 4, 917505, 1610612736, 3, 917506, 1610612736, 131072, 1048573, 0, 131072, 1048574, 0, 3, 1048575, 0, 4, 983040, 0, 4, 983041, 1610612736, 3, 983042, 1610612736, 131072, 1114109, 0, 131072, 1114110, 0, 3, 1114111, -1073741824, 4, 1048576, -1073741824, 4, 1048577, 1610612736, 3, 1048578, 1610612736, 131072, 1179645, 0, 131072, 1179646, 0, 3, 1179647, -1073741824, 4, 1114112, -1073741824, 4, 1114113, 1610612736, 3, 1114114, 1610612736, 131072, 1245181, -1073741824, 131073, 1245182, -1073741824, 131072, 1245183, -1073741824, 131072, 1179648, -1073741824, 131072, 1179649, -1073741824, 131072, 1179650, 1610612736, 131073 )

[node name="shop" parent="." instance=ExtResource( 5 )]
position = Vector2( -115.074, -140.526 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -54.4864, -76.3533 )
rotation = 2.35619

[node name="King" parent="." instance=ExtResource( 4 )]
position = Vector2( 0.552002, -134.182 )
rotation = 3.14159

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -78 )
current = true
smoothing_enabled = true
smoothing_speed = 20.0

[node name="anim" type="AnimationPlayer" parent="."]
anims/intro = SubResource( 1 )

[node name="cam_tween" type="Tween" parent="."]
pause_mode = 2

[node name="enemy_spawn" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="wave_break" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="wave_timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Gui" parent="." instance=ExtResource( 8 )]
layer = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
pause_mode = 2
[connection signal="timeout" from="enemy_spawn" to="." method="_on_enemy_spawn_timeout"]
[connection signal="timeout" from="wave_break" to="." method="_on_wave_break_timeout"]
[connection signal="timeout" from="wave_timer" to="." method="_on_wave_timer_timeout"]
